<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="title_MapView">Map View</string>
    <string name="title_ListView">List View</string>
    <string name="title_Workmates">Workmates</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">642207916410707</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb642207916410707</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">LQZdkuAcKggmUDVHjRs3mxbgC</string>
    <string name="twitter_consumer_secret" translatable="false">vYLCbcB4nES4cwNE2NrbObcQgv3z16X1gJFA5qs3B2qyaLlcm0</string>


    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--   NOTIF   -->
    <string name="workmate_lbl_notif">Workmates who will eat there :</string>
    <string name="notif_txt">Your lunch this afternoon :</string>
    <!-- Used in NavigationDrawer -->
    <string name="title_activity_maps">Map</string>
    <string name="map_id">72030e3beb4aa770</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <!--   GPS   -->
    <string name="gps_disabel">Your GPS seems to be disabled, do you want to enable it?</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Go4Lunch\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_callphone">Access to the call phone service is required to demonstrate the \'call phone\' feature, which allows you to call the restaurant from the app.</string>
    <string name="permission_required_callphone_toast">Call phone permission is required for this demo.</string>
    <string name="permission_callphone_denied">This sample requires call phone permission to enable the \'call phone\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Go4Lunch\'.</string>
    <!--    Authentification    -->
    <string name="connection_succeed">Authentication successful !</string>
    <string name="error_authentication_canceled">Authentication canceled&#8230;</string>
    <string name="error_no_internet">No internet connection !</string>
    <string name="error_unknown_error">An unknown error happened&#8230;</string>
    <!-- Other -->
    <string name="default_notification_channel_id" translatable="false">48454c4c4f0a</string>
    <string name="adress_restaurant_textview">restaurant address</string>
    <string name="name_restaurant_textview">Name restaurant</string>
    <string name="select_language">You can select the language of the application. To do this, press the language you want to see in the application </string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="delete_button">DELETE ACCOUNT</string>
    <string name="not_decided">hasn\'t decided yet.</string>
    <string name="joining">is joining!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_account">The deletion of the account is final and will result in the loss of your data related to it. are you sure you want to delete your account.</string>
    <string name="txt_phone">CALL</string>
    <string name="txt_like">LIKE</string>
    <string name="txt_web">WEBSITE</string>
    <string name="restaurant_name_error">Restaurant name error</string>
    <string name="addresse_restaurant_error">Addresse restaurant error</string>
    <string name="opening_hours_error">Opening hours error</string>
    <string name="restaurant_distance_error">999m</string>
    <string name="nb_workmate_error">0</string>
    <string name="rating_value_error">9</string>
    <string name="search_restaurant">Search Restaurant</string>
    <string name="name_error">Name Error</string>
    <string name="type_adresse_error">An error on the type and address</string>
    <string name="not_selected">"You have just indicated that you no longer wish to eat in this restaurant this noon"</string>
    <string name="selected">"You have just indicated that you wish to eat in this restaurant this lunchtime"</string>
    <string name="drawer_item1">YOUR LUNCH</string>
    <string name="drawer_item2">SETTINGS</string>
    <string name="drawer_item3">LOGOUT</string>
    <string name="Liked">You liked this restaurant</string>
    <string name="no_restaurant_selected">You have not selected a restaurant</string>
</resources>