<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/map_view">

    <fragment
        android:id="@+id/map_view"
        android:name="com.example.go4lunch.ui.Map.MapsFragment"
        android:label="@string/title_MapView"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/lists_view"
        android:name="com.example.go4lunch.ui.ListRestaurant.ListFragment"
        android:label="@string/title_ListView"

        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/wormate_view"
        android:name="com.example.go4lunch.ui.Workmates.WorkmatesFragment"
        android:label="@string/title_Workmates"
        tools:layout="@layout/fragment_workmates" />
</navigation>