<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Detail.DetailFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="413dp"
        android:layout_height="86dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_picture_restaurant">

        <TextView
            android:id="@+id/textView_name_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/name_restaurant_textview"
            android:textColor="@color/colorAccent"
            android:textSize="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_baseline_star_24"
            app:layout_constraintStart_toEndOf="@+id/textView_name_restaurant"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_like1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_baseline_star_24"
            app:layout_constraintBottom_toBottomOf="@+id/textView_name_restaurant"
            app:layout_constraintStart_toEndOf="@+id/ic_like"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_like2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_baseline_star_24"
            app:layout_constraintBottom_toBottomOf="@+id/textView_name_restaurant"
            app:layout_constraintStart_toEndOf="@+id/ic_like1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_info_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Type de restaurant - adresse restaurant"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_name_restaurant" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView_picture_restaurant"
        android:layout_width="413dp"
        android:layout_height="265dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />


    <Button
        android:id="@+id/imageButton_phone"
        android:layout_width="146dp"
        android:layout_height="95dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:drawableTop="@drawable/ic_baseline_phone_24"
        android:text="@string/txt_phone"
        android:textColor="@color/colorPrimary"
        android:tint="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/imageButton_choose"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <Button
        android:id="@+id/imageButton_like"
        android:layout_width="132dp"
        android:layout_height="95dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="#FFFFFF"
        android:drawableTop="@drawable/ic_baseline_star_like_24"
        android:text="@string/txt_like"
        android:textColor="@color/colorPrimary"
        android:tint="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/imageButton_web"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_workmates_detail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_like"
        app:layout_constraintVertical_bias="0"
        tools:listitem="@layout/item_workmate" />

    <Button
        android:id="@+id/imageButton_web"
        android:layout_width="127dp"
        android:layout_height="93dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="#FFFFFF"
        android:drawableTop="@drawable/ic_terre"
        android:text="@string/txt_web"
        android:textColor="@color/colorPrimary"
        android:tint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/imageButton_choose"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="68dp"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:borderWidth="0dp"
        app:fabCustomSize="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>